# Scalper

./: .gitignore  CLAUDE.md  README.md  package-lock.json  pyproject.toml
backend/: config.example.yaml
database/: README.md
deployment/: backup.sh  deploy.sh  env.example  healthcheck.sh  marketscalper-backup.service  marketscalper-backup.timer  marketscalper.service  nginx.conf  restore.sh
docs/: Architecture.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  P0-CLOSURE.md  P1-SPEC.md  README.md
frontend/: app.js  dashboard.js  drawing.js  help.js  history.js  home.js  htf.js  index.html  indicators.js  journal.js  login.js  manifest.webmanifest  notify.js  ops.js  overlays.js  panel.js  paper.js  setups.js  shell.js  strip.js  styles.css  sw.js  timefmt.js  ui.js  v3overlay.js
scripts/: calibration_sweep.py  ci.sh  run_local.ps1  screenshot.mjs  v3_backfill_local.py  v3_replay.py
tests/: conftest.py  gate_dataset.py  rec_dataset.py  s1_dataset.py  test_alerts.py  test_analytics.py  test_api.py  test_async_harness.py  test_binance_backfill.py  test_binance_feed.py  test_bootstrap.py  test_bus.py  test_calibration.py  test_campaign.py  test_candle_builder.py  test_candle_writer.py  test_chart_service.py  test_clock_sampler.py  test_config.py  test_confluence.py  test_db.py  test_determinism.py  test_evaluator.py  test_frontend_shell.py  test_fvg.py  test_htf.py  test_import_boundary.py  test_indicators.py  test_lifecycle.py  test_liquidity.py  test_live_bar.py  test_logging_setup.py  test_mae_analysis.py  test_main.py  test_momentum.py  test_ops.py  test_orderblock.py  (+26 more)
(+114 files in other folders)
